--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,8 +19,7 @@ html {
 body {
   background-color: gray;
   /* Use a system font, if none are available use an available sans-sarif font */
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-family: "Fredoka", sans-serif;
   margin: 0;
 }
 
