add favicon & logo

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,7 +27,7 @@ nav {
   background-color: white;
   font-size: 1.6rem;
   display: flex;
-  justify-content: center;
+  justify-content: right;
 }
 
 main {
@@ -39,4 +39,11 @@ main {
 
 h1 {
   font-size: 3.6rem;
+}
+
+#profile-icon {
+  border: 2px solid rgb(255, 174, 0);
+  border-radius: 50px;
+  justify-self: center;
+  margin-top: .2rem;
 }
