--- a/views/partials/html-head.ejs
+++ b/views/partials/html-head.ejs
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+    id="favicon"
+    rel="icon"
+    href="https://i.imgur.com/MEmp9pd.png"
+    type="image/png" 
+    sizes="32x32"
+    >
     <link href="https://fonts.googleapis.com/css2?family=Fredoka" rel="stylesheet">
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <title><%= title %></title>
+    
