--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,10 @@
 <%- include('./partials/html-head') %>
 <%- include('./partials/nav') %>
+<link rel="stylesheet" href="../public/stylesheets/index.css">
 
 <main>
-  <h1>hello, <%= user ? user.profile.name : "friend" %></h1>
-  <% if (user?.profile.avatar) { %>
-    <div>
-      <img
-        src="<%= user.profile.avatar %>"
-        alt="<%= user.profile.name %> avatar"
-      />
-    </div>
-  <% } %>
+  <!-- <h1>hello, <%#= user ? user.profile.name : "friend" %></h1> -->
+  
 </main>
 
 <%- include('./partials/footer') %>
