--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,9 +4,19 @@
 </head>
 <body>
   <nav>
+    <img id="fox-logo" src="https://i.imgur.com/MEmp9pd.png" alt="Fox" width="100">
+    <% if (user?.profile.avatar) { %>
+      <div>
+        <img
+          id = "profile-icon"
+          src="<%= user.profile.avatar %>"
+          alt="<%= user.profile.name %> avatar"
+        />
+      </div>
+    <% } %>
     <% if (user) { %>
       <a href="/auth/logout">
-        <button type="submit">Logout</button>
+        <button id="logout" type="submit">Logout</button>
       </a>
     <% } else { %>
       <a href="/auth/google" class="siwg-link">
