--- a/views/partials/html-head.ejs
+++ b/views/partials/html-head.ejs
@@ -6,7 +6,7 @@
     <link
     id="favicon"
     rel="icon"
-    href="https://i.imgur.com/MEmp9pd.png"
+    href="/images/logo/FoxIcon.png"
     type="image/png" 
     sizes="32x32"
     >
