--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,7 +4,7 @@
 </head>
 <body>
   <nav>
-    <img id="fox-logo" src="https://i.imgur.com/MEmp9pd.png" alt="Fox" width="100">
+    <img class="fox" src="/images/logo/FoxIcon.png" alt="Fox">
     <% if (user?.profile.avatar) { %>
       <div>
         <img
