add initial games view

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,7 +4,14 @@
 </head>
 <body>
   <nav>
-    <img class="fox" src="/images/logo/FoxIcon.png" alt="Fox">
+    <a href="/">
+      <img 
+        class="fox" 
+        src="/images/logo/FoxIcon.png" 
+        alt="Fox"
+      >
+    </a>
+    <a href="/games">All Games</a>
     <% if (user?.profile.avatar) { %>
       <div>
         <img
