--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -4,8 +4,18 @@
 
 <main>
   <h1><%= title %></h1>
+  
+  <section>
+    <ul>
+      <% games.forEach(game => { %>
+        <div id="games-layout">
+          <%= game.name %>
+          <!-- <%#= game.releaseYear %>  -->
+        </div>
+          <% }) %>
+      </ul>
+  </section>
 
-  <h2>Helloooooooooooo</h2>
 </main>
 
 
