--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -12,6 +12,7 @@
       >
     </a>
     <a href="/games">All Games</a>
+    <a href="/games/new">Add Game</a>
     <% if (user?.profile.avatar) { %>
       <div>
         <img
