--- a/views/games/new.ejs
+++ b/views/games/new.ejs
@@ -4,24 +4,26 @@
 
 <main>
   <h1>Add Game</h1>
-  <form action="/flights" method="POST">
-    <label>Name:
-      <input type="text" name="name">
-    </label><br>
-    <label>Genre:
-      <input type="text" name="genre">
-    </label><br>
-    <label>ESRB Rating:
-      <input type="text" name="esrbRating">
-    </label><br>
-    <label>Release Year:
-      <input type="text" name="esrbRating">
-    </label><br>
-    <label>Cover Image:
-      <input type="text" name="coverImage">
-    </label><br>
-    <button type="submit">Add Game</button>
-  </form>
+  <% if (user) { %>
+    <form action="/games" method="POST">
+      <label>Name:
+        <input type="text" name="name" autocomplete="off">
+      </label><br>
+      <label>Genre:
+        <input type="text" name="genre" autocomplete="off">
+      </label><br>
+      <label>ESRB Rating:
+        <input type="text" name="esrbRating" autocomplete="off">
+      </label><br>
+      <label>Release Year:
+        <input type="text" name="releaseYear" autocomplete="off">
+      </label><br>
+      <label>Cover Image:
+        <input type="text" name="coverImage" autocomplete="off">
+      </label><br>
+      <button type="submit">Add Game</button>
+    </form>
+  <% } %>
 </main>
 
 <%- include('../partials/footer') %>
