add new review view

--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -24,9 +24,10 @@
 
   <% if (user) { %>
     <button>
-      <a href="/reviews"></a>
+      <a href="/reviews/new">
+        Add Review
+      </a>
     </button>
-
   <% } %>
 </section>
 
