change review model from reference to embedded

--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -24,7 +24,7 @@
 
   <% if (user) { %>
     <button>
-      <a href="/reviews/new">
+      <a href="/games/<%= game._id %>/reviews">
         Add Review
       </a>
     </button>
