add review functionality

--- a/views/games/reviews.ejs
+++ b/views/games/reviews.ejs
@@ -8,7 +8,7 @@
 
   <form 
     id="add-review-form" 
-    action="/reviews" 
+    action="/games/<%= game._id %>" 
     method="post"
   >
   <label for="rating-select">Rating:</label>
