--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -42,15 +42,17 @@
               <br>
               <%= review.createdAt.toLocaleDateString() %></div>
               <br>
-              <% console.log(review.addedBy) %> 
+              <% console.log(review.addedBy) %>
+
               <% if (review.addedBy.equals(user?.profile._id)) { %>
-                <form action="/games/<%= game._id %>/reviews/<%= review._id %>/edit" method="GET">
-                  <button class="btn" type="submit">Edit Review</button>
+                <form action="/games/<%= game._id %>/<%= review._id %>" method="GET">
+                  <button type="submit">Edit Review</button>
                 </form>
                 <form action="/games/<%= game._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
-                  <button class="btn" type="submit">Delete Review</button>
+                  <button type="submit">Delete Review</button>
                 </form>
               <% } %>
+              
           <% }) %>
               <strong><%= (total / game.reviews.length).toFixed(1) %></strong>
     <% } else { %>
