--- a/public/stylesheets/games/index.css
+++ b/public/stylesheets/games/index.css
@@ -4,20 +4,78 @@ h1 {
 }
 
 section {
-  width: 40vw;
+  /* width: 40vw;
   height: 50vh;
   background-color: var(--section-bg-color);
   border: 2px solid black;
   text-align: center;
-  padding: 0 20px 10px 20px;
+  padding: 0 20px 10px 20px; */
 }
 
 h2 {
   font-size: 4rem;
 }
 
-a {
-  font-size: 2rem;
+.btn-base{
+  display: flex;
+  width: 160px;
+  height: 50px;
+  border-radius: 50px;
+  background-color: rgb(92, 92, 92);
+  color: white;
+  font-weight: 600;
+  margin: 0 auto;
+  margin-top: -25px;
+  font-size: 1.5rem;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  cursor: pointer;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.btn-link{
+  text-decoration: none;
+}
+
+.card-container{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.card-base {
+  width: 200px;
+  height: 300px;
+  background-color: var(--log-in-hover-bg-color);
+  margin: 50px;
+  border-radius: 40px;
+  box-shadow: 4px 4px 40px rgba(0, 0, 0, 0.2);
+}
+
+.card-base:hover {
+  width: 200px;
+  height: 300px;
+  background-color: var(--log-in-bg-color);
+  margin: 50px;
+  border-radius: 40px;
+  box-shadow: 4px 4px 40px rgba(0, 0, 0, 0.2);
+}
+
+.content{
+  padding: 10px 35px;
+  font-size: 1.2rem;
+  color:black;
+  font-style: italic;
+}
+
+.game-bg {
+  width: 200px;
+  height: 175px;
+  border-radius: 40px;
+  position: relative;
+  z-index: 1;
 }
 
 #heading {
