--- a/public/stylesheets/games/index.css
+++ b/public/stylesheets/games/index.css
@@ -3,14 +3,14 @@ h1 {
   margin: 0;
 }
 
-section {
-  /* width: 40vw;
+/* section {
+  width: 40vw;
   height: 50vh;
   background-color: var(--section-bg-color);
   border: 2px solid black;
   text-align: center;
-  padding: 0 20px 10px 20px; */
-}
+  padding: 0 20px 10px 20px;
+} */
 
 h2 {
   font-size: 4rem;
@@ -21,7 +21,7 @@ h2 {
   width: 160px;
   height: 50px;
   border-radius: 50px;
-  background-color: rgb(92, 92, 92);
+  background-color: rgb(114, 114, 114);
   color: white;
   font-weight: 600;
   margin: 0 auto;
@@ -45,27 +45,42 @@ h2 {
   text-align: center;
 }
 
+.card-container:hover .card-base{
+  filter: blur(2px);
+  transform: scale(0.9);
+  opacity: 0.9;
+}
+
 .card-base {
   width: 200px;
   height: 300px;
   background-color: var(--log-in-hover-bg-color);
   margin: 50px;
   border-radius: 40px;
-  box-shadow: 4px 4px 40px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 2px 100px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+  overflow: hidden;
 }
 
-.card-base:hover {
+.card-container .card-base:hover {
   width: 200px;
   height: 300px;
   background-color: var(--log-in-bg-color);
   margin: 50px;
   border-radius: 40px;
-  box-shadow: 4px 4px 40px rgba(0, 0, 0, 0.2);
+  box-shadow: 10px 10px 100px rgba(0, 0, 0, 0.2);
+  filter: blur(0px);
+  transform: scale(1.1);
+  opacity: 1;
 }
 
 .content{
-  padding: 10px 35px;
+  width: 200px;
+  height: 120px;
+  border-radius: 40px;
+  padding: 15px 35px;
   font-size: 1.2rem;
+  font-weight: 600;
   color:black;
   font-style: italic;
 }
