--- a/public/stylesheets/games/new.css
+++ b/public/stylesheets/games/new.css
@@ -3,17 +3,94 @@ h1 {
   margin: 0;
 }
 
-section {
+/* section {
   width: 40vw;
   height: 50vh;
   background-color: var(--section-bg-color);
   border: 2px solid black;
   text-align: center;
   padding: 0 20px 10px 20px;
-}
+} */
 
 h2 {
   font-size: 4rem;
+}
+
+.btn-base{
+  display: flex;
+  width: 160px;
+  height: 50px;
+  border-radius: 50px;
+  background-color: rgb(114, 114, 114);
+  color: white;
+  font-weight: 600;
+  margin: 0 auto;
+  margin-top: -25px;
+  font-size: 1.5rem;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  cursor: pointer;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.btn-link{
+  text-decoration: none;
+}
+
+.card-container{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.card-container:hover .card-base{
+  filter: blur(2px);
+  transform: scale(0.9);
+  opacity: 0.9;
+}
+
+.card-base {
+  width: 200px;
+  height: 300px;
+  background-color: var(--log-in-hover-bg-color);
+  margin: 50px;
+  border-radius: 40px;
+  box-shadow: 2px 2px 100px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+  overflow: hidden;
+}
+
+.card-container .card-base:hover {
+  width: 200px;
+  height: 300px;
+  background-color: var(--log-in-bg-color);
+  margin: 50px;
+  border-radius: 40px;
+  box-shadow: 10px 10px 100px rgba(0, 0, 0, 0.2);
+  filter: blur(0px);
+  transform: scale(1.1);
+  opacity: 1;
+}
+
+.content{
+  width: 200px;
+  height: 120px;
+  border-radius: 40px;
+  padding: 15px 35px;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color:black;
+  font-style: italic;
+}
+
+.game-bg {
+  width: 200px;
+  height: 175px;
+  border-radius: 40px;
+  position: relative;
+  z-index: 1;
 }
 
 #heading {
