--- a/public/stylesheets/games/index.css
+++ b/public/stylesheets/games/index.css
@@ -1,6 +1,7 @@
 h1 {
   font-size: 10rem;
   margin: 0;
+  text-shadow: -1px 0 white, 0 1px rgb(255, 255, 255), 1px 0 white, 0 -1px white;
 }
 
 /* section {
@@ -58,7 +59,7 @@ h2 {
   margin: 50px;
   border-radius: 40px;
   box-shadow: 2px 2px 100px rgba(0, 0, 0, 0.2);
-  transition: 0.5s;
+  transition: 0.2s;
   overflow: hidden;
 }
 
@@ -68,7 +69,8 @@ h2 {
   background-color: var(--log-in-bg-color);
   margin: 50px;
   border-radius: 40px;
-  box-shadow: 10px 10px 100px rgba(0, 0, 0, 0.2);
+  border: 2px solid white;
+  box-shadow: 0 0 5px orange;
   filter: blur(0px);
   transform: scale(1.1);
   opacity: 1;
