--- a/public/stylesheets/profiles/show.css
+++ b/public/stylesheets/profiles/show.css
@@ -1,4 +1,8 @@
 #profile-image {
   width: 100px;
   height: 100px;
+  border: 2px solid white;
+  box-shadow: 0 0 5px orange;
+  margin-top: 10px;
+  border-radius: 2px;
 }
