--- a/public/stylesheets/reviews/new.css
+++ b/public/stylesheets/reviews/new.css
@@ -1,6 +1,7 @@
 h1 {
   font-size: 10rem;
   margin: 0;
+  text-shadow: -1px 0 white, 0 1px rgb(255, 255, 255), 1px 0 white, 0 -1px white;
 }
 
 section {
