--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,14 +33,19 @@ body {
 
   font-family: "Fredoka", sans-serif;
   margin: 0;
-  background-color: var(--bg-color);
+  /* background-color: var(--bg-color); */
+  background-image: linear-gradient(rgb(207, 84, 84), black),
+  url(/images/foxGoT.jpg);
+  height: 100vh;
+  background-blend-mode: saturation;
+  background-size: cover;
+  /* backdrop-filter: blur(1px); */
 }
 
-nav {
-  background-color: white;
-  font-size: 1.6rem;
-  display: flex;
-  justify-content: right;
+h1 {
+  font-size: 10rem;
+  margin: 0;
+  text-shadow: -1px 0 white, 0 2px rgb(255, 255, 255), 2px 0 white, 0 -1px white;
 }
 
 main {
