--- a/public/stylesheets/games/index.css
+++ b/public/stylesheets/games/index.css
@@ -95,6 +95,13 @@ h2 {
   z-index: 1;
 }
 
+.game-bg-noImg{
+  background-color: rgb(182, 177, 177);
+  width: 200px;
+  height: 175px;
+  border-radius: 40px
+}
+
 #heading {
   margin: 80px 0 30px 0;
   display: flex;
