--- a/public/stylesheets/games/index.css
+++ b/public/stylesheets/games/index.css
@@ -1,17 +1,6 @@
-h1 {
-  font-size: 10rem;
-  margin: 0;
-  text-shadow: -1px 0 white, 0 1px rgb(255, 255, 255), 1px 0 white, 0 -1px white;
+section {
+  width: 75vw;
 }
-
-/* section {
-  width: 40vw;
-  height: 50vh;
-  background-color: var(--section-bg-color);
-  border: 2px solid black;
-  text-align: center;
-  padding: 0 20px 10px 20px;
-} */
 
 h2 {
   font-size: 4rem; 
@@ -44,6 +33,7 @@ h2 {
   display: flex;
   justify-content: center;
   text-align: center;
+  flex-wrap: wrap;
 }
 
 .card-container:hover .card-base{
