--- a/public/stylesheets/games/new.css
+++ b/public/stylesheets/games/new.css
@@ -1,18 +1,13 @@
-h1 {
-  font-size: 10rem;
-  margin: 0;
-}
-
-/* section {
+section {
   width: 40vw;
   height: 50vh;
   background-color: var(--section-bg-color);
   border: 2px solid black;
   text-align: center;
   padding: 0 20px 10px 20px;
-} */
-
-h2 {
+}
+ 
+label {
   font-size: 4rem;
 }
 
