--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,14 +1,7 @@
-h1 {
-  font-size: 10rem;
-  margin: 0;
-  color: black;
-  text-shadow: -1px 0 white, 0 1px rgb(255, 255, 255), 1px 0 white, 0 -1px white;
-}
-
 section {
   width: 40vw;
   height: 50vh;
-  background-color: var(--section-bg-color);
+  background-color: rgb(251, 250, 245);
   border: 2px solid black;
   text-align: center;
   padding: 0 20px 10px 20px;
@@ -19,7 +12,6 @@ h2 {
 }
 
 #heading {
-  margin: 80px 0 30px 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,6 +21,7 @@ h2 {
   height: 10rem;
   width: 10rem;
   margin-left: 20px;
+  margin-top: 4.5rem;
 }
 
 #intro-body{
