--- a/public/stylesheets/profiles/show.css
+++ b/public/stylesheets/profiles/show.css
@@ -1,8 +1,29 @@
+h1 {
+  margin: 0;
+}
+
+section {
+  width: 50vw;
+  height: 20vh;
+  background-color: var(--soft-white);
+  border: 2px solid black;
+  margin-top: 2vh;
+  /* display: flex;
+  justify-content: center;
+  text-align: center; */
+}
+
+#fav-header {
+  display: flex;
+  justify-content: center;
+  font-size: 2rem;
+}
+
 #profile-image {
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
   border: 2px solid white;
   box-shadow: 0 0 5px orange;
-  margin-top: 10px;
+  margin-top: 5vh;
   border-radius: 2px;
 }
