--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -15,7 +15,7 @@ body {
   color: var(--soft-white);
   font-weight: 500;
   border: 3px outset grey;
-  height: 7vh;
+  height: 60px;
 }
 
 .fox-nav {
