--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -46,7 +46,7 @@ body {
 }
 
 h1 {
-  font-size: 10rem;
+  font-size: 100px;
   margin: 0;
   text-shadow: -2px 0 black, 0 3px black, 3px 0 black, 0 -2px black;
   color: var(--soft-white);
@@ -54,6 +54,19 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
+}
+
+h2 {
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+}
+
+h3 {
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
 }
 
 main {
