--- a/views/profiles/show.ejs
+++ b/views/profiles/show.ejs
@@ -19,7 +19,7 @@
     
     
     <% if (isSelf) { %>
-      <form id="add-to-favorites" action="/profiles/<%= profile.id %> " method="POST">
+      <form id="add-to-favorites" action="/profiles/<%= profile.id %>" method="POST">
         <select name="gameId">
           <% games.forEach(game => { %>
             <option value="<%= game._id %>"><%= game.name %></option>
@@ -34,10 +34,10 @@
     
     <% profile.favorites.forEach(favorite => { %>
       <div class="card-base card" id="games-layout">
-        <a href="/games/<%= game._id %>">
-          <%  if ( game.coverImage.includes(".jpg") || game.coverImage.includes(".png")){ %>
+        <a href="/games/<%= favorite._id %>">
+          <%  if ( favorite.coverImage.includes(".jpg") || favorite.coverImage.includes(".png")){ %>
             <img class="game-bg"
-            src="<%= game.coverImage %> " 
+            src="<%= favorite.coverImage %> " 
             alt="game-background"
             >       
             <% } else { %>
@@ -47,15 +47,15 @@
               <% } %> 
               >    
             </a>
-            <a class="btn-link" href="/games/<%= game._id %>">
+            <a class="btn-link" href="/games/<%= favorite._id %>">
               <button class="btn-base">
-                <%= game.name %> 
+                <%= favorite.name %> 
               </button>
               <div class="content">
-                Genre: <%= game.genre %>
+                Genre: <%= favorite.genre %>
                 <br>
                 <br>
-                Release Year: <%= game.releaseYear %> 
+                Release Year: <%= favorite.releaseYear %> 
               </div>
             </a>
           </div>
