fix nav bar issue on some views

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="/stylesheets/siwg.css">
   <% } %>
   <link rel="stylesheet" href="/stylesheets/nav.css">
-  <script src="script.js" defer></script>
+  <script src="/script.js" defer></script>
 </head>
 <body>
   <nav class="navbar">
